--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,244 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  background-color: #f2f2f2;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  width: 228px;
+  height: 32px;
+  background-size: contain;
+  }
+
+.logo_plase_header {
+  position: absolute;
+  z-index: 3;
+  top: 30px;
+  left: 64px;
+}
+
+.title {
+  font-size: 102px;
+  font-weight: 600px;
+  width: 730px;
+  line-height: 96px;
+  
+ }
+
+.title_place_header {
+  position: relative;
+  align-self: center;
+  justify-content: space-between;
+  margin-left: 64px;
+  z-index: 3;
+}
+
+.subtitle {
+  width: 388px;
+  bottom: 30px;
+  left: 64px;
+  line-height: 25px;
+  font-size: 18px;
+  z-index: 3;
+  font-weight: normal;
+}
+
+.subtitle_place_header {
+  position: absolute;
+}
+
+.header_link {
+  text-decoration: none;
+}
+
+.main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  right: 0px;
+  bottom: 0px;
+  background-size: cover;
+  z-index: 2;
+}
+
 .header__square-pic {
-  height: 568px;
+  position: absolute;
+  right: 0px;
+  top: 64px;
   width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  z-index: 1;
+}
+
+.description {
+  display: flex;
+  position: relative;
+  padding-top: 100px;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  margin: 0px auto;
+  justify-content: space-between;
+}
+
+.two-columns_brief {
+  min-width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin: 0;
+}
+
+.two-columns_main-text {
+  width: 80%;
+  min-width: 784px;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  margin: 0px;
+}
+
+.two-columns_paragraph {
+  margin: 0 0 30px 0;
+}
+
+.two-columns_paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns_span {
+  font-weight: 600;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  padding: 100px 0;
+}
+
+.section-title {
+  width: 60%;
+  text-align: center;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 0 0 20px 0;
+}
+
+.section-subtitle {
+  width: 60%;
+  text-align: center;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  margin: 0;
+}
+
+.table{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  z-index: 4;
+}
+
+.table_cell {
+  width: 250px;
+  margin-top: 60px;
+  padding-bottom: 0;
+}
+
+.table_heading {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 0;
+}
+
+.table_text {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin: 20px 0 0 0;
+}
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  padding-top: 100px;
+  height: 890px;
+  background-color: #f2f2f2 ;
+}
+
+.feynman-title {
+  width: 648px;
+  text-align: center;
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 0;
+  z-index: 3;
+}
+
+.feynman-subtitle {
+  text-align: center;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  margin-top: 70px;
+  z-index: 3;
+}
+
+.feynman_link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  color: #2f80ed;
+
+}
+
+.feynman_img {
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  bottom: 0px;
+  left: 0px;
+  background-size: contain;
+  z-index: 1;
+}
+
+.kaufman {
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  padding: 90px 0 0 0;
+}
+
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +259,69 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.triangle {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: 0;
+}
+
+.footer {
+  min-height: 350px;
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  position: relative;
+  background-color: #000000;
+  justify-content: center;
+}
+
+.columns {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+}
+
+.column_content {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  margin-top: 0;
+}
+.column_content_copyright {
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.author {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  margin: 18px 0;
+}
+
+.column_heading {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+}
+
+
+.column-link {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 30px;
+}
+
+.social-icon {
+  width: 16px;
+  height: 16px;
 }
