--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
   background-size: cover;
   }
 
-.logo__place_header {
+.logo_place_header {
   position: absolute;
   z-index: 3;
   top: 30px;
@@ -115,7 +115,7 @@
   margin: 0 0 30px 0;
 }
 
-.two-columns_paragraph:last-of-type {
+.two-columns__paragraph:last-of-type {
   margin-bottom: 0;
 }
 
@@ -130,7 +130,7 @@
   padding: 100px 0;
 }
 
-.section__title {
+.section-title {
   width: 60%;
   text-align: center;
   font-size: 60px;
@@ -139,7 +139,7 @@
   margin: 0 0 20px 0;
 }
 
-.section__subtitle {
+.section-subtitle {
   width: 60%;
   text-align: center;
   font-size: 24px;
@@ -237,15 +237,15 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  padding: 90px 0 0 0;
+  padding: 90px 0;
 }
 
-.section__title_theme_dark {
+.section-title_theme_dark {
   color: white;
   z-index: 2;
 }
 
-.section__subtitle_theme_dark {
+.section-subtitle_theme_dark {
   color: white;
   z-index: 2;
 }
@@ -286,7 +286,7 @@
   justify-content: space-between;
 }
 
-.footer__column_content {
+.footer__column {
   display: flex;
   color: white;
   flex-direction: column;
@@ -298,7 +298,7 @@
   flex-basis: 711px;
 }
 
-.logo__place_footer {
+.logo_place_footer {
   background-image: url(../images/logo_place_footer.svg);
 }
 .footer__author {
@@ -312,16 +312,9 @@
   font-size: 18px;
   font-weight: 600;
   line-height: 30px;
-  margin: 0;
+  margin: 0 0 20px 0;
 }
 
-.footer__column-links {
-  text-decoration: none;
-  color: white;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 30px;
-}
 
 .footer__column-link {
   text-decoration: none;
