--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,7 @@
 .feynman {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
     position: relative;
     align-items: center;
     padding-top: 100px;
